[package]
edition = "2021"
name = "rusty-mouse"
version = "0.1.0"
description = "An Apple Magic Mouse driver for Windows written in Rust"
repository = "https://github.com/AchimStuy/Rusty-Mouse"
categories = ["hardware-support"]
publish = false

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 31

[lib]
crate-type = ["cdylib"]
# Tests from root driver crates must be excluded since there's no way to prevent linker args from being passed to their unit tests: https://github.com/rust-lang/cargo/issues/12663
test = false

[build-dependencies]
wdk-build = "0.3.0"

[dependencies]
wdk = "0.3.0"
wdk-sys = "0.3.0"
